# aea/cli_gui/swagger.yaml
@@ -12,7 +12,7 @@ basePath: /api
 
 # Paths supported by the server application
 paths:
-  /agents:
+  /agent:
     get:
       operationId: app.get_agents
       tags:
@@ -49,7 +49,7 @@ paths:
           schema:
             type: string
 
-  /agents/{agent_id}:
+  /agent/{agent_id}:
     delete:
       operationId: app.delete_agent
       tags:
@@ -72,17 +72,110 @@ paths:
           schema:
             type: string
 
-  /protocols:
+  /agent/{agent_id}/{item_type}:
+    post:
+      operationId: app.fetch_item
+      tags:
+      - agents
+      summary: Fetch a protocol from the registry to the currently selected agent
+      parameters:
+        - name: agent_id
+          in: path
+          description: id of agent to add protocol to
+          type: string
+          required: True
+        - name: item_type
+          in: path
+          description: type of item to add ("protocol", "connection" or "skill")
+          type: string
+          required: True
+        - name: item_id
+          in: body
+          description: id of protocol to add
+          schema:
+            type: string
+          required: True
+      responses:
+        201:
+          description: Protocol added successfully
+          schema:
+            type: string
+
+        400:
+          description: Cannot add protocol to agent
+          schema:
+            type: string
+    get:
+      operationId: app.get_local_items
+      tags:
+      - agents
+      summary: Return list of all items if a given type supported by this agent
+      parameters:
+        - name: agent_id
+          in: path
+          description: id of agent to searh in
+          type: string
+          required: True
+        - name: item_type
+          in: path
+          description: type of item to list ("protocol", "connection" or "skill")
+          type: string
+          required: True
+
+      responses:
+        200:
+          description: Successfully read protocol list operation
+          schema:
+            type: array
+            items:
+              type: string
+        400:
+          description: Cannot find protocols in agent
+          schema:
+            type: string
+
+  /protocol:
     get:
       operationId: app.get_registered_protocols
       tags:
       - agents
       summary: Return list of all registered protocols
-      description: List of local folders under the packages protocols directory
+      description: List of folders under the packages protocols directory
       responses:
         200:
-          description: Successfully read people list operation
+          description: Successfully read protocol list operation
           schema:
             type: array
             items:
               type: string
+
+  /connection:
+    get:
+      operationId: app.get_registered_connections
+      tags:
+      - agents
+      summary: Return list of all registered connections
+      description: List of local folders under the packages connections directory
+      responses:
+        200:
+          description: Successfully read connection list operation
+          schema:
+            type: array
+            items:
+              type: string
+
+  /skill:
+    get:
+      operationId: app.get_registered_skills
+      tags:
+      - agents
+      summary: Return list of all registered kills
+      description: List of local folders under the packages connections directory
+      responses:
+        200:
+          description: Successfully read skills list operation
+          schema:
+            type: array
+            items:
+              type: string
+
